remove warnings de build: deprecations, finalize e shade
- pom.xml: troca -source/-target 11 por --release 11; exclui JARs
  duplicados do fat jar (javax.ws.rs-api, jaxb-api, servlet-api,
  jakarta.annotation-api); filtra module-info.class e arquivos de
  licenca/manifesto de terceiros no shade plugin
- substitui new Integer/Double/Long() por valueOf()/parseInt() e
  comparacoes por Integer.compare()/Long.compare() em ~30 classes
- substitui finalize() por dispose() em ControleCorrida,
  ControleEstatisticas e GerenciadorVisual; atualiza callers
- reescreve FormatDate com java.time (DateTimeFormatter), mantendo
  apenas os 6 metodos efetivamente usados no projeto

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>