@@ -261,7 +261,7 @@ public class ControleCampeonatoCliente {
 			}
 		});
 		spinnerQtdeVoltas = new JSpinner();
-		spinnerQtdeVoltas.setValue(new Integer(12));
+		spinnerQtdeVoltas.setValue(Integer.valueOf(12));
 		grid.add(spinnerQtdeVoltas);
 		JComboBox comboBoxNivelCorrida = new JComboBox();
 		comboBoxNivelCorrida.addItem(Lang.msg(Global.CONTROLE_AUTOMATICO));
@@ -575,9 +575,9 @@ public class ControleCampeonatoCliente {
 					PilotosPontosCampeonato p1 = (PilotosPontosCampeonato) o1;
 					PilotosPontosCampeonato p2 = (PilotosPontosCampeonato) o2;
 					if (p1.getPontos() != p2.getPontos()) {
-						return new Integer(p2.getPontos()).compareTo(new Integer(p1.getPontos()));
+						return Integer.compare(p2.getPontos(), p1.getPontos());
 					} else {
-						return new Integer(p2.getVitorias()).compareTo(new Integer(p1.getVitorias()));
+						return Integer.compare(p2.getVitorias(), p1.getVitorias());
 					}
 				}
 			});
@@ -672,7 +672,7 @@ public class ControleCampeonatoCliente {
 				public int compare(Object o1, Object o2) {
 					ConstrutoresPontosCampeonato c1 = (ConstrutoresPontosCampeonato) o1;
 					ConstrutoresPontosCampeonato c2 = (ConstrutoresPontosCampeonato) o2;
-					return new Integer(c2.getPontos()).compareTo(new Integer(c1.getPontos()));
+					return Integer.compare(c2.getPontos(), c1.getPontos());
 				}
 			});
 		}
@@ -751,9 +751,9 @@ public class ControleCampeonatoCliente {
 					PilotosPontosCampeonato p1 = (PilotosPontosCampeonato) o1;
 					PilotosPontosCampeonato p2 = (PilotosPontosCampeonato) o2;
 					if (p1.getPontos() != p2.getPontos()) {
-						return new Integer(p2.getPontos()).compareTo(new Integer(p1.getPontos()));
+						return Integer.compare(p2.getPontos(), p1.getPontos());
 					} else {
-						return new Integer(p2.getVitorias()).compareTo(new Integer(p1.getVitorias()));
+						return Integer.compare(p2.getVitorias(), p1.getVitorias());
 					}
 				}
 			});
